--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-### Updated on Sun Dec 12 01:25:39 AM PST 2021 ###
+### Updated on Sun Dec 12 03:37:05 AM PST 2021 ###
 *
 #.git
 !.gitignore
 !dmenugitignore
+!LICENSE
 !README.md
 !tracked-dir
