--- a/tracked-dir/explicitly-tracked/.gitignore
+++ b/tracked-dir/explicitly-tracked/.gitignore
@@ -1,4 +1,4 @@
-### Updated on Sun Dec 12 02:15:32 AM PST 2021 ###
+### Updated on Sun Dec 26 10:37:08 PM PST 2021 ###
 *
 #.gitignore
 #not-recursively-tracked
