--- a/tracked-dir/not-explicitly-tracked/.gitignore
+++ b/tracked-dir/not-explicitly-tracked/.gitignore
@@ -1,4 +1,4 @@
-### Updated on Sun Dec 12 01:24:55 AM PST 2021 ###
+### Updated on Sun Dec 26 10:37:08 PM PST 2021 ###
 *
 #.gitignore
 !untrackable-file
